--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -78,6 +78,10 @@ jobs:
         run: |
           patch -p1 < patches/Patch-main-RPI-4.patch
 
+      - name: Firewall patch
+        run: |
+          patch -p1 < patches/Patch-FirewallRPI-4.patch
+
       - name: 构建自定义文件结构
         run: |
           cd package
@@ -88,7 +92,7 @@ jobs:
           rm -rf AdGuardHome
           popd
           svn co https://github.com/kiddin9/openwrt-packages/trunk/luci-app-fileassistant
-          svn co https://github.com/immortalwrt/immortalwrt/trunk/package/emortal/ipv6-helper
+          svn co https://github.com/Lienol/openwrt-package/branches/other/lean/ipv6-helper
           svn co https://github.com/kiddin9/openwrt-packages/trunk/luci-app-qbittorrent-simple
           git clone https://github.com/xiaorouji/openwrt-passwall
           git clone -b luci --single-branch https://github.com/xiaorouji/openwrt-passwall luci-app-passwall
@@ -117,6 +121,10 @@ jobs:
           # IPv6支持:
           # CONFIG_PACKAGE_dnsmasq is not set
           CONFIG_PACKAGE_dnsmasq-full=y
+          CONFIG_PACKAGE_dnsmasq_full_ipset=y
+          # CONFIG_PACKAGE_dnsmasq_full_nftset is not set
+          CONFIG_PACKAGE_ip6tables-zz-legacy=y
+          CONFIG_PACKAGE_ip6tables-mod-nat=y
           CONFIG_PACKAGE_ipv6helper=y
 
           # 文件系统支持:
