--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -90,6 +90,9 @@ jobs:
           svn co https://github.com/kiddin9/openwrt-packages/trunk/luci-app-fileassistant
           svn co https://github.com/immortalwrt/immortalwrt/trunk/package/emortal/ipv6-helper
           git clone https://github.com/sbwml/openwrt-qBittorrent
+          pushd openwrt-qBittorrent
+          rm -rf luci-app-qbittorrent
+          popd
           git clone https://github.com/xiaorouji/openwrt-passwall luci-app-passwall
           git clone https://github.com/xiaorouji/openwrt-passwall-packages
           pushd luci-app-passwall/luci-app-passwall/root/etc
