--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -89,7 +89,7 @@ jobs:
           popd
           svn co https://github.com/kiddin9/openwrt-packages/trunk/luci-app-fileassistant
           svn co https://github.com/immortalwrt/immortalwrt/trunk/package/emortal/ipv6-helper
-          svn co https://github.com/wangzan200808/bypackages/trunk/luci-app-qbittorrent-simple
+          git clone https://github.com/sbwml/openwrt-qBittorrent
           git clone https://github.com/xiaorouji/openwrt-passwall luci-app-passwall
           git clone https://github.com/xiaorouji/openwrt-passwall-packages
           pushd luci-app-passwall/luci-app-passwall/root/etc
@@ -153,9 +153,7 @@ jobs:
           CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Geodata=y
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin is not set
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray is not set
-          CONFIG_PACKAGE_luci-app-qbittorrent-simple=y
-          CONFIG_PACKAGE_luci-app-qbittorrent-simple_static=y
-          # CONFIG_PACKAGE_luci-app-qbittorrent-simple_dynamic is not set
+          CONFIG_PACKAGE_luci-app-qbittorrent=y
           CONFIG_PACKAGE_luci-app-samba4=y
           CONFIG_PACKAGE_luci-app-sqm=y
           CONFIG_PACKAGE_luci-app-ttyd=y
