--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -35,8 +35,9 @@ jobs:
         run: |
           sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
           sudo -E apt update
+          sudo -E apt install python3-pip
           sudo -E apt -y full-upgrade
-          sudo -E apt -y install ack antlr3 aria2 asciidoc autoconf automake autopoint binutils bison build-essential bzip2 ccache cmake cpio curl device-tree-compiler fastjar flex gawk gettext gcc-multilib g++-multilib git gperf haveged help2man intltool libc6-dev-i386 libelf-dev libglib2.0-dev libgmp3-dev libltdl-dev libmpc-dev libmpfr-dev libncurses5-dev libncursesw5-dev libreadline-dev libssl-dev libtool lrzsz mkisofs msmtp nano ninja-build p7zip p7zip-full patch pkgconf python3 python3-pip libpython3-dev qemu-utils rsync scons squashfs-tools subversion swig texinfo uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev
+          sudo -E apt -y install ack antlr3 aria2 asciidoc autoconf automake autopoint binutils bison build-essential bzip2 ccache cmake cpio curl device-tree-compiler fastjar flex gawk gettext gcc-multilib g++-multilib git gperf haveged help2man intltool libc6-dev-i386 libelf-dev libglib2.0-dev libgmp3-dev libltdl-dev libmpc-dev libmpfr-dev libncurses5-dev libncursesw5-dev libreadline-dev libssl-dev libtool lrzsz mkisofs msmtp nano ninja-build p7zip p7zip-full patch pkgconf python3 python3-pip libpython3-dev qemu-utils rsync scons squashfs-tools subversion swig texinfo uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev git-filter-repo
           sudo -E apt -y autoremove --purge
           sudo -E apt clean
           sudo -E timedatectl set-timezone "Asia/Hong_Kong"
@@ -84,15 +85,14 @@ jobs:
           mkdir openwrt-packages
           cd openwrt-packages
           git clone https://github.com/symonlee/openwrt-smartdns xipk
-          pushd xipk
           rm -rf AdGuardHome
-          popd
           git clone https://github.com/kiddin9/openwrt-packages
           cd openwrt-packages
           git filter-repo --subdirectory-filter luci-app-fileassistant
           git filter-repo --path-rename luci-app-fileassistant/:
-          cd
-          git clone https://github.com/immortalwrt/immortalwrt.git --depth=1 --branch=master --single-branch package/emortal/ipv6-helper
+          git clone https://github.com/immortalwrt/immortalwrt
+          git filter-repo --subdirectory-filter ipv6-helper
+          git filter-repo --path-rename ipv6-helper/:
           git clone https://github.com/sbwml/openwrt-qBittorrent
           git clone https://github.com/xiaorouji/openwrt-passwall luci-app-passwall
           git clone https://github.com/xiaorouji/openwrt-passwall-packages
