--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -112,7 +112,7 @@ jobs:
           # 设置固件大小:
           CONFIG_TARGET_ROOTFS_PARTSIZE=1984
 
-          # IPv6支持:
+          # DNSMASQ-FULL支持:
           # CONFIG_PACKAGE_dnsmasq is not set
           CONFIG_PACKAGE_dnsmasq-full=y
 
