--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -88,6 +88,9 @@ jobs:
           rm -rf AdGuardHome
           popd
           git clone https://github.com/sbwml/openwrt-qBittorrent
+          pushd openwrt-qBittorrent
+          rm -rf qBittorrent-static
+          popd
           git clone https://github.com/xiaorouji/openwrt-passwall luci-app-passwall
           git clone https://github.com/xiaorouji/openwrt-passwall-packages
           pushd luci-app-passwall/luci-app-passwall/root/etc
