--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -51,6 +51,7 @@ jobs:
 
       - name: 修改部分patch文件
         run: |
+          sed -i '14,16d' package/emortal/default-settings/files/99-default-settings
           sed -i '29s/1/0/g' package/network/config/firewall4/patches/001-firewall4-add-support-for-fullcone-nat.patch
           sed -i '30s/1/0/g' package/network/config/firewall4/patches/001-firewall4-add-support-for-fullcone-nat.patch
           sed -i '31s/1/0/g' package/network/config/firewall4/patches/001-firewall4-add-support-for-fullcone-nat.patch
@@ -131,9 +132,9 @@ jobs:
           cat >> .config <<EOF
 
           # 编译rpi-4固件:
-          CONFIG_TARGET_bcm27xx=y
-          CONFIG_TARGET_bcm27xx_bcm2711=y
-          CONFIG_TARGET_bcm27xx_bcm2711_DEVICE_rpi-4=y
+          CONFIG_TARGET_x86=y
+          CONFIG_TARGET_x86_64=y
+          CONFIG_TARGET_x86_64_DEVICE_generic=y
 
           # 编译ext4固件:
           CONFIG_TARGET_ROOTFS_EXT4FS=y
@@ -166,11 +167,6 @@ jobs:
           CONFIG_PACKAGE_kmod-usb-storage=y
           CONFIG_PACKAGE_kmod-usb-storage-extras=y
           CONFIG_PACKAGE_kmod-usb-storage-uas=y
-
-          # 去掉板载无线:
-          # CONFIG_PACKAGE_brcmfmac-nvram-43455-sdio is not set
-          # CONFIG_PACKAGE_cypress-firmware-43455-sdio is not set
-          # CONFIG_PACKAGE_kmod-brcmfmac is not set
 
           # USB3.0支持:
           CONFIG_PACKAGE_kmod-usb-net=y
