--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -132,9 +132,9 @@ jobs:
           cat >> .config <<EOF
 
           # 编译rpi-4固件:
-          CONFIG_TARGET_x86=y
-          CONFIG_TARGET_x86_64=y
-          CONFIG_TARGET_x86_64_DEVICE_generic=y
+          CONFIG_TARGET_rockchip=y
+          CONFIG_TARGET_rockchip_armv8=y
+          CONFIG_TARGET_rockchip_armv8_DEVICE_friendlyarm_nanopi-r6s=y
 
           # 编译ext4固件:
           CONFIG_TARGET_ROOTFS_EXT4FS=y
@@ -169,8 +169,6 @@ jobs:
           CONFIG_PACKAGE_kmod-usb-storage-uas=y
 
           # USB3.0支持:
-          CONFIG_PACKAGE_kmod-usb-net=y
-          CONFIG_PACKAGE_kmod-usb-net-rtl8152=y
           CONFIG_PACKAGE_kmod-usb2=y
           CONFIG_PACKAGE_kmod-usb2-pci=y
           CONFIG_PACKAGE_kmod-usb3=y
@@ -200,6 +198,7 @@ jobs:
           CONFIG_PACKAGE_luci-app-ttyd=y
 
           # 常用软件包:
+          CONFIG_PACKAGE_AdGuardHome=y
           CONFIG_PACKAGE_autocore=y
           CONFIG_PACKAGE_dnsproxy=y
           CONFIG_PACKAGE_unzip=y
@@ -237,7 +236,7 @@ jobs:
         run: |
           mkdir -p ./artifact/firmware
           rm -rf $(find ./bin/targets/ -type d -name "packages")
-          cp -rf $(find ./bin/targets/ -type f -name "*.buildinfo" -o -name "*combined.img.gz" -o -name "sha256sums") ./artifact/firmware/
+          cp -rf $(find ./bin/targets/ -type f -name "*.buildinfo" -o -name "*sysupgrade.img.gz" -o -name "sha256sums") ./artifact/firmware/
 
       - name: Upload firmware
         uses: actions/upload-artifact@main
