--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -204,6 +204,7 @@ jobs:
           # 常用软件包:
           CONFIG_PACKAGE_AdGuardHome=y
           CONFIG_PACKAGE_autocore=y
+          CONFIG_PACKAGE_btop=y
           CONFIG_PACKAGE_dnsproxy=y
           CONFIG_PACKAGE_unzip=y
           CONFIG_PACKAGE_bind-dig=y
@@ -211,7 +212,6 @@ jobs:
           CONFIG_PACKAGE_luci-compat=y
           CONFIG_PACKAGE_luci-lib-ipkg=y
           CONFIG_PACKAGE_fdisk=y
-          CONFIG_PACKAGE_htop=y
           CONFIG_PACKAGE_luci=y
           CONFIG_PACKAGE_luci-theme-bootstrap=y
           # CONFIG_PACKAGE_wpad-basic-mbedtls is not set
