--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -84,6 +84,7 @@ jobs:
           rm -rf dns2socks
           rm -rf dns2tcp
           rm -rf dnsproxy
+          rm -rf geoview
           rm -rf hysteria
           rm -rf ipt2socks
           rm -rf microsocks
@@ -197,7 +198,7 @@ jobs:
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs is not set
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_SingBox is not set
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus is not set
-          # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Geodata is not set
+          CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Geodata=y
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin is not set
           CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
           CONFIG_PACKAGE_luci-app-qbittorrent=y
